tests/builder/unit.rs
use boring_derive::Builder;

#[derive(Debug, Default, Builder)]
struct Example;

fn main() {}
